# srv-unet

./: .gitignore  LICENSE  README.md  data_loader.py  evaluate_average.py  evaluate_model.py  inference_time.py  pyproject.toml  render.py  train.py  train_lpips.py  train_lpips_vmaf.py  train_lpsis.py  train_vmaf-neg.py  train_vmaf.py  train_vmaf_lpips.py  train_vmaf_vmaf-neg.py  train_vmaf_vmaf-neg_lpips.py  train_vmafs.py  utils.py
backup/: evaluate_average_xslx.py  evaluate_model.py  evaluate_model_mod.py  train_base.py  train_lpsis.py  train_vmaf_lpips.py
helpers/: enhance_video.py  evaluate_average.py  evaluate_bitrate.py  evaluate_video.py  plot.py  test_540_22.csv
results/: bitrate_results.csv  bitrate_results_summary.csv  bitrate_results_summary.xlsx  tot_value.csv
results/22/: crf_22_1.5x_models.csv  crf_22_1.5x_models.xlsx  crf_22_models.csv  crf_22_models.xlsx
results/30/: crf_30_all_mini.csv  crf_30_all_mini.xlsx  crf_30_models.csv  crf_30_models.xlsx
results/37/: crf_37_all_mini.csv  crf_37_all_mini.xlsx  crf_37_models.csv  crf_37_models.xlsx
results/42/: crf_42_1.5x_models.csv  crf_42_1.5x_models.xlsx  crf_42_models.csv  crf_42_models.xlsx
results/base/: _540_1080_TEST_CRF22.csv  _540_1080_TEST_CRF30.csv  _540_1080_TEST_CRF37.csv  _540_1080_TEST_CRF42.csv  _720_1080_TEST_CRF22.csv  _720_1080_TEST_CRF30.csv  _720_1080_TEST_CRF37.csv  _720_1080_TEST_CRF42.csv  test_540_22.xlsx
results/crf_22/: crf_22.csv  crf_22.xlsx
vmaf_torch/: __init__.py  adm.py  motion.py  svm_predict.py  utils.py  vif.py  vmaf.py
wandb/: latest-run
(+48 files in other folders)
